hphp/test/zend/good/ext/reflection/tests/bug64936.php.skipif
<?php
if (!extension_loaded('reflection') || !extension_loaded('tokenizer')) print 'skip missing reflection of tokernizer extension';
?>